--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,5 +1,6 @@
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container">
+    <span class="text-muted right"> <i class="bi bi-arrow-right-circle-fill"></i> <a href="{{path('mention_legal')}}"> Mentions légales  </a> </span>
     <span class="text-muted">&copy; 2022 <a href='#'>AZERTY Solutions Informatiques</a></span>
   </div>
 </footer>
