--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,6 +37,8 @@
 	@import url("public/rdv/show.css");
 	/*layout*/
 	@import url("public/layout/footer.css");
+	/*Mention légal*/
+	@import url("public/mention_legal.css");
 /*base*/
 @import url("base.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
