--- a/templates/appel/_delete_form.html.twig
+++ b/templates/appel/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_appel_delete', {'id': appel.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_appel_delete', {'id': appel.id}) }}" onsubmit="return confirm('Etes vous sûr de supprimer cette appel ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ appel.id) }}">
     <button class="btn btn-danger"><img width="20px" class="delete" src="{{asset('./images/icon-delete.png')}}"/></button>
 </form>
