--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -70,9 +70,9 @@
                                 <td  class='h-chargeur'>  <img  class='cross' src="{{asset('./images/cross.png')}}" width="40px"/></td>
                                 {% endif %}
                                 {% if client.appareil.editeur.etat.statut is defined %}
-                                <td class='statutAppareilAll h-etat'> 
-                                    <span class="badge badge-statut-appareil" style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
-                                </td>
+                                    <td class='statutAppareilAll h-etat-c' > 
+                                        <span class="badge" id='change-statut{{client.id}}' style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
+                                    </td>
                                 {% else %}
                                 <td>  </td>
                                 {% endif %}
