--- a/templates/emails/layout/link.html.twig
+++ b/templates/emails/layout/link.html.twig
@@ -1,1 +1,1 @@
-<a href="https://azertyhost.net/public/rdv/public/{{id}}" target="_blank">
+<a href={{"https://azertypro.fr/admin/public/rdv/public/"~ id}} target="_blank">
