--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -51,7 +51,6 @@
 			
 		{{ form_start(form,{ 'attr': { 'class' : 'form-material form cacher ' } })}}
 		<h2>Informations clients</h2>
-			<div class="grix xs1 sm2">
 				<div class=" form-group">
 						{% for child in form.client.personne %}
 
@@ -62,12 +61,12 @@
 
 						{% endfor %}
 				</div>
-				<div class=" form-group">
-						{{form_widget(form.entreprise)}}
-						{{form_label(form.entreprise,null,{ 'attr': {  'class' : 'form-control rounded-1 cu inline required  label-lg'} })}}
+			<div class="grix xs1 sm2">
+				<div class="form-field">
+						{{form_widget(form.entreprise,{ 'attr': { 'class' : 'form-control rounded-1 required ', 'id':'entreprise'} })}}
+						<label for="entreprise">Entreprise (optionnel)</label>
 				</div>
 			</div>
-				
 
 
 			<div class="grix xs1 sm2">
